package ca.mcmaster.se2aa4.catan;

public enum ResourceType {
    WOOD,
    BRICK,
    WHEAT,
    ORE,
    SHEEP
}
