package ca.mcmaster.se2aa4.catan;

public enum BuildingType {
    SETTLEMENT,
    CITY
}
